test/tests/compiler/5_local_variables/valid/add_variables.plx
pub fn main(none) i32 {
    first_variable: i32 = 1
    second_variable: i32 = 2
    return first_variable + second_variable
}
