test/tests/compiler/5_local_variables/invalid_semantics/extra_credit/compound_invalid_lvalue_2.plx
pub fn main(none) i32 {
    a: i32 = 10
    (a += 1) -= 2
}
